# jupyterlite

./: .bumpversion.cfg  .eslintignore  .eslintrc.js  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .readthedocs.yml  .yarnrc  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  development_setup.md  dodo.py  eslint.config.mjs  integration-in-other-project.md  kernel-bridge-examples.md  lint-staged.config.js  package.json  pyproject.toml  requirements-build.txt  requirements-docs.txt  requirements-editable.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  tsconfig.eslint.json  tsconfig.test.json  tsconfig.typedoc.json  tsconfigbase.json  tsconfigbase.test.json  typedoc.json
.binder/: environment.yml  jupyterlite-proxy.json  postBuild
.github/: dependabot.yml  environment.yml  pull_request_template.md
app/: .jupyter-lite  .npmignore  bootstrap.js  config-utils.js  index.html  index.js  index.template.html  index.template.js  jupyter-lite.ipynb  jupyter-lite.json  jupyterlite.schema.v0.json  manifest.webmanifest  package.json  repodata.schema.v0.json  rspack.config.analyze.js  rspack.config.js  rspack.config.watch.js  services.js  swagger.json  webpack.config.js  webpack.config.watch.js
app-classic/: index.html  index.js  package.json
buildutils/: package.json
docs/: architecture.md  changelog.md  cli-addons.md  cli.ipynb  conf.py  configuring.md  deploying.md  developer-guide.md  doit.ipynb  environment.yml  extensions.md  index.md  migration.md  overrides.json  schema-v0.rst  troubleshooting.md  user-guide.md
docs/howto/extensions/jupyterlite-mwe-addon/: README.md  pyproject.toml
docs/howto/extensions/jupyterlite-mwe-addon/src/jupyterlite_mwe_addon/: __init__.py
examples/: Museums_in_DC.geojson  README.md  card.vue  folium_demo.ipynb  intro-retro.ipynb  intro.ipynb  ipycanvas.ipynb  ipyleaflet.ipynb  ipympl.ipynb  javascript.ipynb  js - widget theming.ipynb  js - widgets.ipynb  jupyter-lite.json  jupyter_lite_config.json  overrides.json  p5.ipynb  pyolite - altair.ipynb  pyolite - bqplot.ipynb  pyolite - emscripten-filesystem.ipynb  pyolite - folium.ipynb  pyolite - images.ipynb  pyolite - interactive-widgets.ipynb  pyolite - ipycytoscape.ipynb  pyolite - ipyvuetify.ipynb  pyolite - ipywidgets.ipynb  pyolite - matplotlib.ipynb  pyolite - plotly.ipynb  pyolite.ipynb  python.ipynb  renderers.ipynb  requirements-demo.txt  requirements-piplite.txt  requirements-pyodide-lock.txt  zika_assembled_genomes.fasta
jupyterlab-iframe-bridge-example/: .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json
jupyterlab-iframe-bridge-example/.github/workflows/: build.yml  check-release.yml
jupyterlab-iframe-bridge-example/jupyterlab-iframe-bridge-example/: __init__.py
jupyterlab-iframe-bridge-example/src/: index.ts
jupyterlite/: __init__.py  _version.py  liteapp.py
lab/: index.js  package.json
py/jupyterlite/: LICENSE  README.md  pyproject.toml
py/jupyterlite-core/: README.md  pyproject.toml  setup.py
py/jupyterlite-core/jupyterlite_core/: __init__.py  __main__.py  app.py  config.py  constants.py  manager.py  optional.py  trait_types.py
py/jupyterlite-core/jupyterlite_core/addons/: __init__.py  archive.py  base.py  contents.py  extension_manager.py  federated_extensions.py  icons.py  lite.py  mathjax.py  mimetypes.py  report.py  serve.py  serviceworker.py  settings.py  static.py  translation.py  workspaces.py
py/jupyterlite-core/jupyterlite_core/tests/: __init__.py  conftest.py  test_archive.py  test_cli.py  test_cli_aliases_flags.py  test_contents.py  test_extend_addon.py  test_extension_manager.py  test_federated.py  test_mathjax.py  test_meta.py  test_serve.py
py/jupyterlite-core/src/jupyterlite_core/: __init__.py  optional.py
py/jupyterlite-core/src/jupyterlite_core/addons/: base.py  serve.py  translation.py
py/jupyterlite-core/src/jupyterlite_core/tests/: __init__.py  conftest.py  test_cli.py  test_extend_addon.py  test_meta.py
py/jupyterlite-javascript-kernel/: LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
py/jupyterlite-javascript-kernel/jupyterlite_javascript_kernel/: __init__.py
py/jupyterlite-javascript-kernel/src/: index.ts
py/jupyterlite-labextension/: README.md  setup.cfg
py/jupyterlite/jupyterlite/: __init__.py  constants.py
py/jupyterlite/jupyterlite/addons/: base.py
py/jupyterlite/src/jupyterlite/: __init__.py  __main__.py  _version.py  app.py  config.py  constants.py  manager.py  optional.py  trait_types.py
py/jupyterlite/src/jupyterlite/addons/: __init__.py  archive.py  base.py  contents.py  favicon.py  federated_extensions.py  hash.py  jupyterlab.py  lite.py  mathjax.py  micropip.py  mimetypes.py  overrides.py  piplite.py  pyodide.py  report.py  retrolab.py  serve.py  serviceworker.py  settings.py  static.py  translation.py  workspaces.py
py/jupyterlite/src/jupyterlite/tests/: conftest.py  test_archive.py  test_cli.py  test_cli_aliases_flags.py  test_contents.py  test_extend_addon.py  test_federated.py  test_mathjax.py  test_meta.py  test_micropip.py  test_piplite.py  test_pyodide.py  test_serve.py
py/jupyterlite/src/jupyterlite/tests/fixtures/: the-smallest-extension-0.1.0-py_0.tar.bz2  the_smallest_extension-0.1.0-py3-none-any.whl
py/the_smallest_extension/: LICENSE  MANIFEST.in  README.md  install.json  package.json  setup.cfg  setup.py
py/the_smallest_extension/conda.recipe/: meta.yaml
py/the_smallest_extension/schema/: plugin.json
py/the_smallest_extension/src/: index.ts  mime.ts  theme.ts
py/the_smallest_extension/the_smallest_extension/: __init__.py  _version.py
scripts/: bump-version.py  check-bump-version.py  check-integrity.py  compile-lock-files.py  dev-build.py  post-process-typedoc.py  schema-widgets.ipynb  serve.js  update-versions.js  upgrade-dependencies.py
ui-tests/: build.py  jupyter-lite.json  jupyter_lite_config.json  jupyter_lite_config_no_content.json  overrides.json  package.json  playwright.config.js  (+1 more)
(+285 files in other folders)
