[project]
name = "jupyterlite-root"
version = "0.2.0a1"

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = [ "jupyterlite_core", "jupyterlite",]

[tool.jupyter-releaser]
skip = [ "build-python", "check-links", "check-python",]

[tool.jupyter-releaser.hooks]
before-bump-version = [ "python -m pip install jupyter-releaser -r requirements-build.txt -r requirements-lint.txt", "jlpm", ]
after-bump-version = [ "doit repo:integrity", "doit lint", "jlpm",]
before-build-npm = [ "doit build",]
after-check-npm = [ "doit dist", "rm dist/jupyterlite-app-*.tgz",]

[tool.jupyter-releaser.options]
version-cmd = "python scripts/bump-version.py --force"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N",
  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
  "W", "YTT",
]
ignore = [
# T201 `print` found
"T201",
# T203 `print` found
"T203",
# C408 Unnecessary `dict` call (rewrite as a literal)
"C408", "C416",
]

[tool.ruff.per-file-ignores]
# S101 Use of `assert` detected
"**/tests/*" = ["S101"]

[tool.tbump.version]
current = "0.2.0a1"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "package.json"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "py/jupyterlite/jupyterlite/__init__.py"

[[tool.tbump.file]]
src = "py/jupyterlite/pyproject.toml"
search = "jupyterlite-core >={current_version}"

[[tool.tbump.file]]
src = "py/jupyterlite-core/jupyterlite_core/__init__.py"

[[tool.tbump.file]]
src = "py/jupyterlite-javascript-kernel/pyproject.toml"

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""
