[project]
name = "jupyterlite-root"
version = "0.8.0a1"

# Dependency groups (PEP 735) for development dependencies
# Install with: pip install --group dev
[dependency-groups]
# Minimal build dependencies
build = [
    "hatch>=1.6.3,<2",
    "jupyterlab>=4.6.0a0,<4.7",
]

# Demo site extensions
demo = [
    "bqplot~=0.12.43",
    "ipycanvas~=0.14.2",
    "ipycytoscape~=1.3.3",
    "ipyleaflet~=0.20.0",
    "ipympl~=0.9.4",
    "ipyvue~=1.11.0",
    "ipyvuetify~=1.11.0",
    "ipywidgets~=8.1.3",
    "jupyterlab-fasta~=3.3.0",
    "jupyterlab-geojson~=3.4.0",
    "jupyterlab-kernelspy~=4.0.0",
    "jupyterlab-miami-nights~=0.4.2",
    "jupyterlab-tour~=4.0.1",
    "jupyterlite-p5-kernel~=0.2.0",
    "jupyterlite-pyodide-kernel>=0.8.0a0",
    "notebook>=7.6.0a0,<7.7",
    "plotly~=5.22.0",
]

# Core development
dev = [
    { include-group = "build" },
    "jupyterlite-pyodide-kernel>=0.8.0a0",
    "notebook>=7.6.0a0,<7.7",
    "pkginfo",
    "ruff>=0.8.3",
    "twine>=5.1.1",
    "watchfiles>=0.21",
]

# Documentation building
docs = [
    "docutils>=0.18",
    "myst-nb>=1",
    "pydata-sphinx-theme",
    "pytest-check-links",
    "sphinx>=8.2",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "sphinx-jsonschema",
    "sphinxcontrib-mermaid",
    "sphinxext-rediraffe",
]

# Linting
lint = [
    "jsonschema>=3",
    "nbconvert",
    "nbstripout",
    "pre-commit",
    "ruff>=0.8.3",
]

# Release process
release = [
    { include-group = "build" },
    { include-group = "lint" },
    "jupyter-releaser",
]

# Testing
test = [
    "ansi2html",
    "jsonschema>=3",
    "jupyter_server>=1.11,<3",
    "jupyterlab_server>=2.8.1,<3",
    "pytest>=7",
    "pytest-console-scripts>=1.4.0",
    "pytest-cov>=7",
    "pytest-html",
    "pytest-xdist",
]

# UI tests
ui-tests = [
    { include-group = "build" },
    "jupyterlab==4.6.0a0",
    "jupyterlab-language-pack-fr-FR",
    "jupyterlite-javascript-kernel==0.4.0a0",
    "jupyterlite-p5-kernel==0.2.0",
    "jupyterlite-pyodide-kernel==0.8.0a0",
    "notebook==7.6.0a0",
    "theme-darcula==4.0.0",
]

# All development dependencies (excludes demo)
all-dev = [
    { include-group = "dev" },
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.jupyter-releaser]
skip = ["build-python", "check-links", "check-python"]

[tool.jupyter-releaser.hooks]
before-bump-version = ["python -m pip install --group release", "jlpm install"]
after-bump-version = ["jlpm deduplicate", "jlpm install", "jlpm lint"]
before-build-npm = ["jlpm build:prod", "jlpm pack:app"]
after-check-npm = ["jlpm build:py"]

[tool.jupyter-releaser.options]
version-cmd = "python scripts/bump-version.py"
changelog-path = "docs/changelog.md"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
patch = ["subprocess"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
exclude = ["*.ipynb"]
select = [
  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "N",
  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
  "W", "YTT",
]
ignore = [
# EM101 [*] Exception must not use a string literal, assign to variable first
# EM102 [*] Exception must not use an f-string literal, assign to variable first
"EM101", "EM102",
# FBT001 Boolean positional arg in function definition
"FBT001", "FBT002", "FBT003",
# S101 Use of `assert` detected
"S101",
# T201 `print` found
"T201",
# T203 `print` found
"T203",
# C408 Unnecessary `dict` call (rewrite as a literal)
"C408", "C416",
# RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
"RUF012",
# PLC0415 `import` should be at the top-level of a file (allow lazy imports for optional deps)
"PLC0415",
]

[tool.ruff.lint.per-file-ignores]
# A001 Variable `copyright` is shadowing a Python builtin
# S603 `subprocess` call: check for execution of untrusted input
# S607 Starting a process with a partial executable path
"docs/conf.py" = ["A001", "S603", "S607"]
"scripts/dev-build.py" = ["S603"]
"scripts/bump-version.py" = ["S603"]
"scripts/compile-lock-files.py" = ["S310", "S603", "S607"]
"scripts/upgrade-dependencies.py" = ["S310"]
"**/conftest.py" = ["S603", "S607"]

# TID252 [*] Relative imports from parent modules are banned
"py/*" = ["TID252"]

# S101 Use of `assert` detected
"**/tests/*" = ["S101", "PLR2004"]

# E501 Line too long
"ui-tests/build.py" = ["E501", "S602"]

[tool.tbump.version]
current = "0.8.0a1"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "package.json"
search = "\"version\": \"{current_version}\""

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "py/jupyterlite/jupyterlite/__init__.py"

[[tool.tbump.file]]
src = "py/jupyterlite/pyproject.toml"
search = "jupyterlite-core >={current_version}"

[[tool.tbump.file]]
src = "py/jupyterlite-core/jupyterlite_core/__init__.py"

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""
