[build-system]
requires = ["hatchling>=1.6.3,<2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-core"
authors = [
    {name = "JupyterLite Contributors"},
]
dependencies = [
    "doit >=0.34,<1",
    "jupyter_core >=4.7",
    "pycparser ; platform_python_implementation == 'PyPy'"
]
keywords = [
    "browser",
    "doit",
    "js",
    "jupyter",
    "jupyterlab",
    "notebook",
    "pyodide",
    "schema",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Source = "https://github.com/jupyterlite/jupyterlite"

[project.scripts]
jupyter-lite = "jupyterlite_core.app:main"

[project.optional-dependencies]
test = [
    "ansi2html",
    "diffoscope; sys_platform == 'linux'",
    "pytest-console-scripts",
    "pytest-cov <7",
    "pytest-html",
    "pytest-xdist",
]
libarchive = [
    "libarchive-c >=4.0",
]
lab = [
    "jupyterlab >=4.5.0rc0,<4.6",
    "notebook >=7.5.0rc0,<7.6",
]
contents = [
    "jupyter_server",
]
translation = [
    "jupyterlab_server >=2.8.1,<3",
]
serve = [
    "tornado >=6.1",
]
check = [
    "jsonschema[format_nongpl] >=3",
]
all = [
    "jsonschema >=3",
    "jupyter_server",
    "jupyterlab >=4.5.0rc0,<4.6",
    "jupyterlab_server >=2.8.1,<3",
    "libarchive-c >=4.0",
    "notebook >=7.5.0rc0,<7.6",
    "pkginfo",
    "tornado >=6.1",
]

[project.entry-points."jupyterlite.addon.v0"]
archive = "jupyterlite_core.addons.archive:ArchiveAddon"
contents = "jupyterlite_core.addons.contents:ContentsAddon"
federated_extensions = "jupyterlite_core.addons.federated_extensions:FederatedExtensionAddon"
icons = "jupyterlite_core.addons.icons:IconsAddon"
lite = "jupyterlite_core.addons.lite:LiteAddon"
mimetypes = "jupyterlite_core.addons.mimetypes:MimetypesAddon"
report = "jupyterlite_core.addons.report:ReportAddon"
serve = "jupyterlite_core.addons.serve:ServeAddon"
settings = "jupyterlite_core.addons.settings:SettingsAddon"
static = "jupyterlite_core.addons.static:StaticAddon"
translation = "jupyterlite_core.addons.translation:TranslationAddon"
workspaces = "jupyterlite_core.addons.workspaces:WorkspacesAddon"

[tool.hatch.version]
path = "jupyterlite_core/__init__.py"

[tool.hatch.build.targets.sdist]
artifacts = [
    "jupyterlite_core/jupyterlite-*.tgz",
]
include = [
    "/jupyterlite_core",
    "/*.md",
]

[tool.hatch.build.targets.wheel]
artifacts = [
    "jupyterlite_core/jupyterlite-*.tgz",
]
include = [
    "/jupyterlite_core",
]
