[metadata]
name = jupyterlite-labextension
version = 0.1.0
description = Interatively build JupyterLite sites
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://jupyterlite.rtfd.io
author = JupyterLite Contributors
license = BSD-3-Clause
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/jtpio/jupyterlite/issues
    Changelog = https://github.com/jtpio/jupyterlite/blob/master/CHANGELOG.md
    Documentation = https://jupyterlite.rtfd.io
    Source Code = https://github.com/jtpio/jupyterlite
classifiers =
    Development Status :: 4 - Beta
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
package_dir =
    = src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    jupyterlab >=3,<4

[options.packages.find]
where =
    src
