[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1,<4"]

[project]
name = "jupyterlite"
authors = [
    {name = "JupyterLite Contributors"},
]
dependencies = [
    "doit",
    "entrypoints",
    "jupyter_core >=4.7",
]
keywords = [
    "browser",
    "doit",
    "js",
    "jupyter",
    "jupyterlab",
    "notebook",
    "pyodide",
    "schema",
]
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Source = "https://github.com/jupyterlite/jupyterlite"

[project.scripts]
jupyter-lite = "jupyterlite.app:main"

[project.optional-dependencies]
test = [
    "ansi2html",
    "diffoscope; sys_platform == 'linux'",
    "pytest-console-scripts",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
]
lab = [
    "jupyterlab >=3.4,<4",
]
contents = [
    "jupyter_server",
]
translation = [
    "jupyterlab_server >=2.8.1,<3",
]
serve = [
    "tornado >=6.1",
]
piplite = [
    "pkginfo"
]
mathjax = [
    "jupyter-server-mathjax >=0.2.3",
]
check = [
    "jsonschema[format_nongpl] >=3",
]
all = [
    "jsonschema >=3",
    "jupyter_server",
    "jupyter-server-mathjax >=0.2.3",
    "jupyterlab >=3.0,<4",
    "jupyterlab_server >=2.8.1,<3",
    "pkginfo",
    "tornado >=6.1",
]

[project.entry-points."jupyterlite.addon.v0"]
archive = "jupyterlite.addons.archive:ArchiveAddon"
contents = "jupyterlite.addons.contents:ContentsAddon"
federated_extensions = "jupyterlite.addons.federated_extensions:FederatedExtensionAddon"
lite = "jupyterlite.addons.lite:LiteAddon"
mathjax = "jupyterlite.addons.mathjax:MathjaxAddon"
piplite = "jupyterlite.addons.piplite:PipliteAddon"
pyodide = "jupyterlite.addons.pyodide:PyodideAddon"
report = "jupyterlite.addons.report:ReportAddon"
serve = "jupyterlite.addons.serve:ServeAddon"
settings = "jupyterlite.addons.settings:SettingsAddon"
static = "jupyterlite.addons.static:StaticAddon"
translation = "jupyterlite.addons.translation:TranslationAddon"

[tool.flit.sdist]
include = [
    "src/jupyterlite/jupyterlite-*.tgz",
]

[tool.pytest.ini_options]
filterwarnings = [
    # https://github.com/jupyter-server/jupyter_server_mathjax/pull/11
    "ignore:.*Use `_i18n\\(\\)`.*:FutureWarning",
]
