[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1,<4"]

[project]
name = "jupyterlite"
authors = [
    {name = "JupyterLite Contributors"},
]
dependencies = [
    "jupyterlite-core",
    "jupyterlite-pyodide-kernel >=0.0.4",
]
keywords = [
    "browser",
    "js",
    "jupyter",
    "jupyterlab",
    "notebook",
    "pyodide",
    "schema",
]
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Source = "https://github.com/jupyterlite/jupyterlite"

[project.optional-dependencies]
libarchive = [
    "libarchive-c >=4.0",
]
lab = [
    "jupyterlab >=3.5.3,<3.6",
]
contents = [
    "jupyter_server",
]
translation = [
    "jupyterlab_server >=2.8.1,<3",
]
serve = [
    "tornado >=6.1",
]
mathjax = [
    "jupyter-server-mathjax >=0.2.3",
]
check = [
    "jsonschema[format_nongpl] >=3",
]
all = [
    "jsonschema >=3",
    "jupyter_server",
    "jupyter-server-mathjax >=0.2.3",
    "jupyterlab >=3.5.3,<3.6",
    "jupyterlab_server >=2.8.1,<3",
    "libarchive-c >=4.0",
    "pkginfo",
    "tornado >=6.1",
]
