[build-system]
requires = ["hatchling>=1.6.3,<2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlite"
authors = [
    {name = "JupyterLite Contributors"},
]
dependencies = [
    "jupyterlite-core >=0.4.0b1",
]
keywords = [
    "browser",
    "js",
    "jupyter",
    "jupyterlab",
    "notebook",
    "pyodide",
    "schema",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Source = "https://github.com/jupyterlite/jupyterlite"

[project.optional-dependencies]
libarchive = [
    "libarchive-c >=4.0",
]
lab = [
    "jupyterlab >=4.1.0,<4.2",
    "notebook >=7.2.0,<7.3",
]
contents = [
    "jupyter_server",
]
translation = [
    "jupyterlab_server >=2.8.1,<3",
]
serve = [
    "tornado >=6.1",
]
check = [
    "jsonschema[format_nongpl] >=3",
]
all = [
    "jsonschema >=3",
    "jupyter_server",
    "jupyterlab >=4.2.2,<4.3",
    "jupyterlab_server >=2.8.1,<3",
    "libarchive-c >=4.0",
    "notebook >=7.2.0,<7.3",
    "pkginfo",
    "tornado >=6.1",
]

[tool.hatch.version]
path = "jupyterlite/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/jupyterlite",
    "/*.md",
]

[tool.hatch.build.targets.wheel]
include = [
    "/jupyterlite",
]
