[metadata]
description = a small extension
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://github.com/jupyterlite/the-smallest-extension
author = JupyterLite Contributors
author_email = noreply@example.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
include_package_data = True
zip_safe = False
