[project]
authors = [{name = "JupyterLite Team", email = "lite@jupyter.org"}]
dependencies = [
    "jupyterlite",
]
name = "jupyterlite-mwe-addon"
requires-python = ">= 3.11"
version = "0.1.0"

[project.entry-points."jupyterlite.addon.v0"]
jupyterlite_mwe_addon = "jupyterlite_mwe_addon:MinimalWorkingExampleAddon"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
jupyterlite_mwe_addon = { path = ".", editable = true }

[tool.pixi.tasks]
